--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,6 +25,16 @@
         ga('send', 'pageview');
 
     </script>
+    {% if google_tag_manager_id %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ google_tag_manager_id }}"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', '{{ google_tag_manager_id }}');
+        {% block googleTrack %}{% endblock %}
+    </script>
+    {% endif %}
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/animate.min.css" rel="stylesheet">
