--- a/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -9,7 +9,7 @@
                     <div class="col-md-6">
                         <h3>{{ 'register.create.header'|trans }}</h3>
 
-                        <form action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST">
+                        <form action="{{ path('fos_user_registration_register') }}" method="POST">
 
                             <div class="form-group">
                                 <label for="email" class="control-label">{{ 'register.form.email'|trans }}</label>
