--- a/app/Resources/views/email/matchEmail.txt.twig
+++ b/app/Resources/views/email/matchEmail.txt.twig
@@ -12,6 +12,8 @@ Gör så här:
 
 Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen innan er fika som den andra personen bekräftar.
 
+Det är INTE ett måste att boka in en fika omgående med sin fikakompis. Ni kan tillsammans välja att boka in en fika längre fram. 
+
 2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
 
 3. Om ni vill, ta gärna ett foto eller video från ert möte och skriv några rader om vad ni gjorde och hur det var (med bådas samtycke). Maila hälsningen till oss så delar vi den gärna digitalt för att inspirera fler till att vara med. Eller hashtagga själv med #nyakompisbyrån eller #nyakompisbyran.
