--- a/app/Resources/views/email/matchEmail.txt.twig
+++ b/app/Resources/views/email/matchEmail.txt.twig
@@ -13,7 +13,7 @@ Gör så här:
 Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen innan er fika som den andra personen bekräftar.
 
 
-Det är INTE ett måste att boka in en fika omgående med sin fikakompis. Ni kan tillsammans välja att boka in ett möte digitalt via exempelvis Skype eller FaceTime. Alternativt höras längre fram för att boka in kompisfika. 
+Det är INTE ett måste att boka in en fika omgående med sin fikakompis. Ni kan tillsammans välja att boka in ett möte digitalt via exempelvis Skype eller FaceTime. Alternativt höras längre fram för att boka in en kompisfika. 
 
 
 2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
