--- a/app/Resources/views/email/matchEmail.txt.twig
+++ b/app/Resources/views/email/matchEmail.txt.twig
@@ -11,7 +11,7 @@ Gör så här:
 1. Bestäm ett datum. Du mailar personen inom 3 dagar och bestämmer datum, tid och plats. Skriv gärna på svenska och engelska. Det är bådas ansvar att ni etablerar kontakt med varandra. Kom ihåg att respektera varandra, att inte svara på ett mail påverkar den andra personen som har sett fram emot ett möte. Kontakta oss om du inte får svar.
 Vi rekommenderar att ni byter telefonnummer och skickar en sms-påminnelse dagen innan er fika som den andra personen bekräftar.
 
-<b>Det är INTE ett måste att boka in en fika omgående med sin fikakompis. Ni kan tillsammans välja att boka in ett möte digitalt via exempelvis Skype eller FaceTime. Alternativt höras längre fram för att boka in en kompisfika.</b>
+Det är INTE ett måste att boka in en fika omgående med sin fikakompis. Ni kan tillsammans välja att boka in ett möte digitalt via exempelvis Skype eller FaceTime. Alternativt höras längre fram för att boka in en kompisfika.
 
 
 2. Ni träffas! Ni träffas på ett kafé eller annat offentligt ställe i cirka 1 timme. Försök att inte ha höga förväntningar utan ta det som det kommer. Kom i tid! De tråkiga träffarna är när någon inte dyker upp på utsatt tid.
