--- a/app/Resources/views/email/followUp3.html.twig
+++ b/app/Resources/views/email/followUp3.html.twig
@@ -5,7 +5,7 @@
     Hej {{ user.firstName }}!<br>
     Nu har det gått några månader sedan du och {{ friend.name }} träffades och vi är så glada över att du ville vara
     med. När man anmäler sig till att träffa en kompis via
-    Nya Kopisbyrån skriver man upp sig på att träffas en gång i en timme, men många fortsätter förstås att
+    Nya Kompisbyrån skriver man upp sig på att träffas en gång i en timme, men många fortsätter förstås att
     hålla kontakten och ses och det vi tycker vi är så roligt.
 </p>
 <p>
